--- a/roles/remove_ssh_key/vars/main.yml
+++ b/roles/remove_ssh_key/vars/main.yml
@@ -1,4 +1,7 @@
 ---
-# Variables for the remove_ssh_key role
-user: root
-public_key_path: ~/.ssh/id_rsa.pub
+users:
+  - name: root
+    public_key_path:  ~/.ssh/id_rsa.pub
+
+  # - name: user2
+  #   public_key_path: /path/to/user2/public/key
